--- a/public/ex1-function-test/index.html
+++ b/public/ex1-function-test/index.html
@@ -4,68 +4,141 @@
   <meta charset="utf-8">
   <title>Example 1: Function Test</title>
   <link rel="stylesheet" href="/global/mocha.css">
+  <link rel="stylesheet" href="/global/styles/default.css">
+  <link rel="stylesheet" href="/global/main.css">
   <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
 
 <body>
-
   <h1>Example 1: Function Test</h1>
-  <div id="mocha"></div>
+  <div class="row">
+    <div class="col">
+      <h2>Tests</h2>
+      <pre id="tests-display"><code class="js"></code></pre>
+      <h2>Test-Result</h2>
+      <div id="mocha"></div>
+    </div>
+    <div class="col">
+      <div class="box">
+        <h2>Source</h2>
+        <pre id="source-display"><code class="js"></code></pre>
+      </div>
+    </div>
+  </div>
 
   <script src="/global/mocha.js"></script>
   <script src="/global/chai.js"></script>
-  <script src="/global/sinon-1.14.1.js"></script>
+  <script src="//cdn.rawgit.com/rstacruz/mocha-clean/v0.4.0/index.js"></script>
+  <script src="/global/highlight.pack.js"></script>
+  <script>mocha.traceIgnores = ['mocha.js', 'chai.js']</script>
+  <script src="/global/main.js"></script>
 
-  <script>
-    function add(a, b) {
-      return Number(a) + Number(b);
-    }
+<script id="source">
+'use strict';
 
-    function isPalindrome(word) {
-      if (!word) {
-        return false;
-      }
+function add(a, b) {
+  return Number(a) + Number(b);
+}
 
-      var len = word.trim().length;
+function isPalindrome(word) {
+  if (!word || word.trim() === '') {
+    return false;
+  }
 
-      if (len === 1) {
-        return true;
-      }
-      if (word[0].toLowerCase() === word[len - 1].toLowerCase()) {
-        if (len === 2) {
-          return true;
-        }     
-        return isPalindrome(word.substr(1, len - 2));
-      }
-      return false
-    }
+  var iWord = word.toLowerCase().trim();
+  var len = iWord.length;
 
-    mocha.setup('bdd');
-    var assert = chai.assert;
+  if (len === 1) {
+    return true;
+  }
+  if (iWord[0] === iWord[iWord.length - 1]) {
+    if (len === 2) { return true; }
+    return isPalindrome(iWord.substr(1, iWord.length - 2));
+  }
 
-    describe('Math', function () {
-      it('adds a and b together', function () {
-        assert.equal(add(1, 2), 3);
-        assert.equal(add('1', '2'), 3);
-      });
-    });
+  return false;
+}
+</script>
 
-    describe('Palindrome', function () {
-      it('returns true if word is a palindrome', function () {
-        assert.equal(isPalindrome(''), false);
-        assert.equal(isPalindrome(undefined), false);
-        assert(isPalindrome('a'));
-        assert(isPalindrome('bB '));
-        assert(isPalindrome('Eve'));
-        assert(isPalindrome('ABBA'));
-        assert.equal(isPalindrome('foo'), false);
-      });
-    });
+<script>
+// function isPalindrome(word) {
+//   if (!word) {
+//     return false;
+//   }
 
-    mocha.run();
-  </script>
+//   var len = word.trim().length;
+
+//   if (len === 1) {
+//     return true;
+//   }
+//   if (word[0].toLowerCase() === word[len - 1].toLowerCase()) {
+//     if (len === 2) {
+//       return true;
+//     }
+//     return isPalindrome(word.substr(1, len - 2));
+//   }
+//   return false;
+// }
+</script>
+
+
+<script id="tests">
+/*globals mocha, chai, describe, it, add, isPalindrome */
+
+'use strict';
+mocha.setup('bdd');
+var assert = chai.assert;
+
+describe('Math', function () {
+  it('adds a and b together', function () {
+    assert.equal(add(1, 2), 3);
+    assert.equal(add('1', '2'), 3);
+  });
+});
+
+describe('Palindrome', function () {
+  it('recognizes a single letter as palindrom', function () {
+    assert(isPalindrome('a'));
+  });
+  it('ignores empty strings and undefined', function () {
+    assert.equal(isPalindrome(''), false);
+    assert.equal(isPalindrome(undefined), false);
+  });
+  it('recognizes 2 letter palindrome', function () {
+    assert(isPalindrome('bB '));
+  });
+  it('recognizes n letter palindromes', function () {
+    assert(isPalindrome('Eve'));
+    assert(isPalindrome('ABBA'));
+    assert(isPalindrome('Rotor'));
+    assert(isPalindrome('Lagerregal'));
+  });
+  it('recognizes non palindrome', function () {
+    assert.equal(isPalindrome('foo'), false);
+  });
+});
+
+mocha.run();
+</script>
+
+<script>
+'use strict';
+function el(selector) {
+  var res = document.querySelectorAll(selector);
+  return res.length === 1 ? res[0] : res;
+}
+el('#source-display code').innerHTML = el('#source').innerHTML;
+el('#tests-display code').innerHTML = el('#tests').innerHTML;
+
+var codeBlocks = el('pre code');
+var i;
+var len = codeBlocks.length;
+for (i = 0; i < len; i++) {
+  hljs.highlightBlock(codeBlocks[i]);
+}
+</script>
 
 </body>
 </html>
