--- a/public/ex2-async-test/index.html
+++ b/public/ex2-async-test/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Example 2: Async Test</title>
   <link rel="stylesheet" href="/global/mocha.css">
+  <link rel="stylesheet" href="/global/main.css">
   <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -11,14 +12,21 @@
 
 <body>
   <h1>Example 2: Async Test</h1>
-  <div id="mocha"></div>
+  <div class="col">
+    <h2>Test-Result</h2>
+    <div id="mocha"></div>
+  </div>
+  <div class="col col-source"">
+    <h2>Source</h2>
+    <pre id="source-display"></pre>
+  </div>
 
   <script src="/global/mocha.js"></script>
   <script src="/global/chai.js"></script>
   <script src="/global/sinon-1.14.1.js"></script>
+  <script src="/global/main.js"></script>
 
   <script id="source">
-    // Source
     function async(callback) {
       setTimeout(callback, 500);
     }
@@ -32,7 +40,6 @@
   </script>
 
   <script id="test">
-    // Test
     mocha.setup('bdd');
     var assert = chai.assert;
 
@@ -95,6 +102,10 @@
     });
 
     mocha.run();
+  </script>
+
+  <script>
+    app.copyHtml(app.id('source'), app.id('source-display'));
   </script>
 </body>
 </html>
